update base file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,20 @@ services:
       context: .
       dockerfile: ${CLIENT}/Dockerfile
     ports:
-      - "8545:8545"       # RPC
-      - "8546:8546"       # websocket
-      - "7301:6060"       # metrics
+      - 22301:8545       # RPC
+      - 22302:8546       # websocket
+      - 22303:30303     # P2P TCP (currently unused)
+      - 22303:30303/udp # P2P UDP (currently unused)
+      - 22304:6060       # metrics
     command: [ "bash", "./execution-entrypoint" ]
+    networks:
+        - eth_shared_network
     volumes:
-        - ${HOST_DATA_DIR}:/data
+      - /root/base-chain-node/chain-data-sync/snapshots/mainnet/download/geth:/data
     env_file:
       # select your network here:
 #      - .env.sepolia
-#      - .env.mainnet
+      - .env.mainnet
   node:
     build:
       context: .
@@ -21,13 +25,19 @@ services:
     depends_on:
       - execution
     ports:
-      - "7545:8545"     # RPC
-      - "9222:9222"     # P2P TCP
-      - "9222:9222/udp" # P2P UDP
-      - "7300:7300"     # metrics
-      - "6060:6060"     # pprof
+      - 22305:8545     # RPC
+      - 22306:9222     # P2P TCP
+      - 22306:9222/udp # P2P UDP
+      - 22307:7300     # metrics
+      - 22308:6060     # pprof
     command: [ "bash", "./op-node-entrypoint" ]
+    networks:
+        - eth_shared_network
     env_file:
       # select your network here:
 #      - .env.sepolia
-#      - .env.mainnet
+      - .env.mainnet
+
+networks:
+    eth_shared_network:
+        external: true
