--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -3,11 +3,14 @@ FROM golang:1.22 AS op
 WORKDIR /app
 
 ENV REPO=https://github.com/ethereum-optimism/optimism.git
-ENV VERSION=v1.10.0
-ENV COMMIT=910c9ade39c0bcdff5f2badd94efbe016a428e73
+ENV VERSION=v1.10.2
+ENV COMMIT=8bf7ff60f34a7c5082cec5c56bed1f76cc1893ad
 RUN git clone $REPO --branch op-node/$VERSION --single-branch . && \
     git switch -c branch-$VERSION && \
     bash -c '[ "$(git rev-parse HEAD)" = "$COMMIT" ]'
+
+# Install 'just'
+RUN curl -sSfL 'https://just.systems/install.sh' | bash -s -- --to /usr/local/bin
 
 RUN cd op-node && \
     make VERSION=$VERSION op-node
@@ -17,8 +20,8 @@ FROM golang:1.22 AS geth
 WORKDIR /app
 
 ENV REPO=https://github.com/ethereum-optimism/op-geth.git
-ENV VERSION=v1.101411.2
-ENV COMMIT=3dd9b0274bae3d3d2c80ef517563a360108e8cf6
+ENV VERSION=v1.101411.4
+ENV COMMIT=efa05b1bf5c22a60745e638ad9d4adadfe3daba9
 RUN git clone $REPO --branch $VERSION --single-branch . && \
     git switch -c branch-$VERSION && \
     bash -c '[ "$(git rev-parse HEAD)" = "$COMMIT" ]'
