--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -3,8 +3,8 @@ FROM golang:1.22 AS op
 WORKDIR /app
 
 ENV REPO=https://github.com/ethereum-optimism/optimism.git
-ENV VERSION=v1.10.2
-ENV COMMIT=8bf7ff60f34a7c5082cec5c56bed1f76cc1893ad
+ENV VERSION=v1.11.2
+ENV COMMIT=bc6d11a854b4d4cd60d9de541eb60673912d4f76
 RUN git clone $REPO --branch op-node/$VERSION --single-branch . && \
     git switch -c branch-$VERSION && \
     bash -c '[ "$(git rev-parse HEAD)" = "$COMMIT" ]'
@@ -19,9 +19,13 @@ FROM golang:1.22 AS geth
 
 WORKDIR /app
 
+RUN apt-get update && \
+    apt-get install -y \
+    build-essential
+
 ENV REPO=https://github.com/ethereum-optimism/op-geth.git
-ENV VERSION=v1.101411.4
-ENV COMMIT=efa05b1bf5c22a60745e638ad9d4adadfe3daba9
+ENV VERSION=v1.101500.1
+ENV COMMIT=7017b54770d480b5c8be63dc40eac9da166150f5
 RUN git clone $REPO --branch $VERSION --single-branch . && \
     git switch -c branch-$VERSION && \
     bash -c '[ "$(git rev-parse HEAD)" = "$COMMIT" ]'
